applications/argo-workflows/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argo-workflows
  labels:
    name: argo-workflows
