applications/argo-workflows/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argoci
  name: argoci
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argoci.initialed85.cc
      secretName: argoci
  rules:
    - host: argoci.initialed85.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
